update customer view

--- a/apps/templates/accounts/create-montir-profile.html
+++ b/apps/templates/accounts/create-montir-profile.html
@@ -80,11 +80,11 @@
                             <div class="usernames-group">
                                 <div class="f-name">
                                     <label for="first-name">First Name</label>
-                                    {{ form.firstName(class="form-control") }}
+                                    {{ form.firstname(class="form-control") }}
                                 </div>
                                 <div class="l-name">
                                     <label for="first-name">Last Name</label>
-                                    {{ form.lastName(class="form-control") }}
+                                    {{ form.lastname(class="form-control") }}
                                 </div>
                                 <div class="d-born">
                                     <label for="tanggalLahir_create">Tanggal Lahir</label>
