--- a/apps/templates/bengkel/includes/sidebar.html
+++ b/apps/templates/bengkel/includes/sidebar.html
@@ -8,7 +8,7 @@
                 <div class="b-bg">
                     <i class="feather icon-trending-up"></i>
                 </div>
-                <span class="b-title">Mokel</span>
+                <span class="b-title">{{bengkel.namaBengkel}}</span>
             </a>
             <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
         </div>
@@ -52,6 +52,9 @@
 </nav>
 <!-- [ navigation menu BENGKEL] end -->
 {% elif current_user.role == "Montir" %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
         <div class="navbar-brand header-logo">
@@ -59,7 +62,7 @@
                 <div class="b-bg">
                     <i class="feather icon-trending-up"></i>
                 </div>
-                <span class="b-title">{{ montir.lastName }}</span>
+                <span class="b-title">{{ montir.lastname }}</span>
             </a>
             <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
         </div>
@@ -73,11 +76,6 @@
                         <span class="pcoded-micon"><i class="feather icon-home"></i></span>
                         <span class="pcoded-mtext">Home</span></a>
                 </li>
-                <li data-username="Login Page" class="nav-item {% if 'ketentuan' in segment %} active {% endif %}">
-                    <a href="" class="nav-link">
-                        <span class="pcoded-micon"><i class="feather icon-list"></i></span>
-                        <span class="pcoded-mtext">Produk</span></a>
-                </li>
                 <li data-username="Montir Page" class="nav-item {% if 'montir' in segment %} active {% endif %}">
                     <a href="" class="nav-link">
                         <span class="pcoded-micon"><i class="feather icon-user-check"></i></span>
@@ -86,7 +84,19 @@
                 <li data-username="Notifikasi Page" class="nav-item {% if 'pakta' in segment %} active {% endif %}">
                     <a href="{{url_for('montir_blueprint.berita')}}" class="nav-link">
                         <span class="pcoded-micon"><i class="feather icon-unlock"></i></span>
-                        <span class="pcoded-mtext">Notifikasi</span></a>
+                        <span class="pcoded-mtext">Notifikasi</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <div class="form-check form-switch" id="status-switch">
+                        {%if montir.is_available%}
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
+                        {%elif not montir.is_available%}
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        {%endif%}
+                        
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Status Online</label>
+                    </div>
                 </li>
                 <li class="nav-item pcoded-menu-caption">
                     <label></label>
@@ -101,5 +111,61 @@
         </div>
     </div>
 </nav>
+
+<style>
+    #status-switch {
+        padding: 7px 60px;
+    }
+</style>
+
+<script>
+    // Fungsi untuk mengubah status online ketika toggle berubah
+    document.getElementById('flexSwitchCheckDefault').addEventListener('change', function() {
+        const isChecked = this.checked;
+        const user_id = {{current_user.id}};
+        
+        fetch(`/status-online/${user_id}`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token() }}'
+                
+            },
+            body: JSON.stringify({ status_online: isChecked })
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.message) {
+                console.log("Status berhasil diperbarui:", data.status_online);
+            } else if (data.error) {
+                console.error("Error:", data.error);
+                alert('Terjadi kesalahan saat memperbarui status.');
+            }
+        })
+        .catch(err => {
+            console.error("Fetch error:", err);
+            alert('Terjadi kesalahan jaringan.');
+        });
+    });
+
+    // Fungsi untuk mengambil status online saat halaman dimuat
+    window.onload = function() {
+        const user_id = {{current_user.id}};
+        
+        // Ambil status online dari server menggunakan GET request
+        fetch(`/status-online/${user_id}`)
+            .then(response => response.json())
+            .then(data => {
+                const toggle = document.getElementById('flexSwitchCheckDefault');
+                if (data.status_online !== undefined) {
+                    toggle.checked = data.status_online; // Setel status toggle sesuai dengan status online dari server
+                }
+            })
+            .catch(err => {
+                console.error("Fetch error:", err);
+                alert('Gagal mengambil status online.');
+            });
+    };
+</script>
 {%endif%}
 
