--- a/apps/templates/accounts/register_kendaraan.html
+++ b/apps/templates/accounts/register_kendaraan.html
@@ -18,7 +18,7 @@
 {% include 'includes/navigation.html' %}
 
 {% block content %}
-<main class="container mt-5 pt-6 mb-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
+<main class="container mt-5 pt-6 mb-5"> 
     {% include 'includes/preloader.html' %}
 
     <div class="row justify-content-center">
@@ -31,6 +31,7 @@
                     <label for="jenis">{{ form.jenis.label }}</label>
                     <div class="input-group">
                         <select class="form-control" name="jenis" required>
+                            <option value="" disabled selected>Pilih Tipe Kendaraan</option>
                             <option value="Motor">Motor</option>
                             <option value="Mobil">Mobil</option>
                         </select>
@@ -43,33 +44,15 @@
 
                 <div class="form-group mb-3">
                     <label for="manufaktur">{{ form.manufaktur.label }}</label>
-                    <div class="input-group">
-                        <select class="form-control" name="manufaktur" required>
-                            <option value="Honda">Honda</option>
-                            <option value="Yamaha">Yamaha</option>
-                            <option value="Suzuki">Suzuki</option>
-                            <option value="Kawasaki">Kawasaki</option>
-                            <option value="Ducati">Ducati</option>
-                        </select>
-                        <span class="input-group-text"><i class="fas fa-chevron-down"></i></span>
-                    </div>
+                    <input type="text" class="form-control" name="manufaktur" required>
                     {% for error in form.manufaktur.errors %}
                         <span class="text-danger small">[{{ error }}]</span>
                     {% endfor %}
                 </div>
-
+                
                 <div class="form-group mb-3">
                     <label for="tipe">{{ form.tipe.label }}</label>
-                    <div class="input-group">
-                        <select class="form-control" name="tipe" required>
-                            <option value="Beat">Beat</option>
-                            <option value="Aerox">Aerox</option>
-                            <option value="Satria FU">Satria FU</option>
-                            <option value="Ninja">Ninja</option>
-                            <option value="Monster">Monster</option>
-                        </select>
-                        <span class="input-group-text"><i class="fas fa-chevron-down"></i></span>
-                    </div>
+                    <input type="text" class="form-control" name="tipe" required>
                     {% for error in form.tipe.errors %}
                         <span class="text-danger small">[{{ error }}]</span>
                     {% endfor %}
@@ -77,7 +60,7 @@
 
                 <div class="form-group mb-3">
                     <label for="tahun">{{ form.tahun.label }}</label>
-                    {{ form.tahun(class="form-control") }}
+                    <input type="text" class="form-control" name="tahun" required>
                     {% for error in form.tahun.errors %}
                         <span class="text-danger small">[{{ error }}]</span>
                     {% endfor %}
@@ -85,7 +68,7 @@
 
                 <div class="form-group mb-3">
                     <label for="noPlat">{{ form.noPlat.label }}</label>
-                    {{ form.noPlat(class="form-control") }}
+                    <input type="text" class="form-control" name="noPlat" required>
                     {% for error in form.noPlat.errors %}
                         <span class="text-danger small">[{{ error }}]</span>
                     {% endfor %}
