--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -1,5 +1,5 @@
 <header class="header-global">
-    <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-dark">
+    <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-dark {% if nav_background %}bg-dark{% else %}bg-opacity-20{% endif %}">
         <div class="container position-relative">
             <a class="navbar-brand me-lg-5" href="./index.html">
                 <img class="navbar-brand-dark" src="/static/assets/img/brand/light.svg" alt="Logo light">
