--- a/apps/templates/accounts/create-bengkel-profile.html
+++ b/apps/templates/accounts/create-bengkel-profile.html
@@ -37,7 +37,7 @@
             {% include 'includes/preloader.html' %}
         
             <div class="container">
-                <div class="container-content">
+                <div class="container-content overflow-auto">
                     <h2>Profil</h2>
                     <form method="POST" class="border p-4 shadow-sm rounded">
                         {{ form.hidden_tag() }}
