--- a/apps/templates/accounts/edit_alamat.html
+++ b/apps/templates/accounts/edit_alamat.html
@@ -12,6 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 
+    <!-- Include Bootstrap CSS & JS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
 
@@ -36,7 +37,7 @@
                     <div class="d-flex flex-column align-items-center mb-4">
                         <!-- Profile Picture Section -->
                         <div class="img-profile mb-3" style="position: relative; width: 150px; height: 150px;">
-                            <img src="static/assets/img/zeusProfile.jpg" class="rounded-circle img-fluid" style="width: 100%; height: 100%; object-fit: cover; border: 5px solid #6c757d;" alt="Profile Picture">
+                            <img src="{{ url_for('static', filename='assets/img/zeusProfile.jpg') }}" class="profileImg" alt="Profile Picture"> 
                         </div>
                         
                         <!-- Profile Picture Buttons -->
@@ -80,6 +81,23 @@
             </div>
         </div>
     </main>
+
+    <style>
+        .profileImg {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid black;
+        }
+    
+        @media (max-width: 767px) {
+            .profileImg {
+                width: 100px;
+                height: 100px;
+            }
+        }
+    </style>
 
     <!-- Scripts for handling Select2 functionality -->
     <script>
