--- a/apps/templates/bengkel/includes/sidebar.html
+++ b/apps/templates/bengkel/includes/sidebar.html
@@ -4,7 +4,7 @@
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
         <div class="navbar-brand header-logo">
-            <a href="/" class="b-brand">
+            <a href="{{url_for('bengkel_blueprint.dashboard')}}" class="b-brand">
                 <div class="b-bg">
                     <i class="feather icon-trending-up"></i>
                 </div>
@@ -58,7 +58,7 @@
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
         <div class="navbar-brand header-logo">
-            <a href="/" class="b-brand">
+            <a href="{{url_for('montir_blueprint.beranda_montir')}}" class="b-brand">
                 <div class="b-bg">
                     <i class="feather icon-trending-up"></i>
                 </div>
