add celery task

--- a/apps/templates/bengkel/includes/navigation.html
+++ b/apps/templates/bengkel/includes/navigation.html
@@ -48,7 +48,7 @@
                                     Profile</a>
                                 </li>
                             {% elif current_user.role == "Bengkel" %}
-                                <<li><a href="/profile.html" class="dropdown-item"><i class="feather icon-user"></i>
+                                <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-user"></i>
                                     Profile</a>
                                 </li>
                             {% endif %}
