New database, fix route

--- a/apps/templates/home/customer.html
+++ b/apps/templates/home/customer.html
@@ -50,7 +50,21 @@
                 <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
 
                     <!-- Card for Pesan Jasa -->
-                    <div class="signin-inner my-4 my-lg-0 bg-white shadow-soft border rounded border-gray-300 p-4 p-lg-5 w-100 fmxw-500">
+                     {%if status == "process" %}
+                     <div class="signin-inner my-4 my-lg-0 bg-white shadow-soft border rounded border-gray-300 p-4 p-lg-5 w-100 fmxw-500">
+                        <div class="text-center text-md-center mb-4 mt-md-0">
+                            <h1 class="mb-0 h3">
+                                Periksa Jasa
+                            </h1>
+                            <br />
+                            <p>
+                                Pesan layanan montir kami yang siap melayani di tempat Anda.
+                            </p>
+                            <a href="{{ url_for('pemesanan_blueprint.order_status', task_id=task_id) }}" class="btn btn-primary">Pesan Sekarang</a>
+                        </div>
+                    </div>
+                     {%else%}
+                     <div class="signin-inner my-4 my-lg-0 bg-white shadow-soft border rounded border-gray-300 p-4 p-lg-5 w-100 fmxw-500">
                         <div class="text-center text-md-center mb-4 mt-md-0">
                             <h1 class="mb-0 h3">
                                 Pesan Jasa Montir
@@ -62,6 +76,8 @@
                             <a href="{{ url_for('pemesanan_blueprint.order_montir') }}" class="btn btn-primary">Pesan Sekarang</a>
                         </div>
                     </div>
+                     {%endif%}
+                    
 
                 </div>
                 <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
