--- a/apps/templates/bengkel/montir_page.html
+++ b/apps/templates/bengkel/montir_page.html
@@ -61,30 +61,30 @@
                                                                 </td>
                                                                 <td>
                                                                     <h6 class="text-muted">
-                                                                        {%if item.montir.is_available%}
+                                                                        {% if item.montir.is_available or item.montir.status != "idle" %}
                                                                             <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
                                                                             <span id="status-text-{{ item.montir.montirId }}">
-                                                                                Status: Online
+                                                                                Online
                                                                             </span>
                                                                         {%else%}
                                                                             <i class="fas fa-circle text-c-red f-10 m-r-15"></i>
                                                                             <span id="status-text-{{ item.montir.montirId }}">
-                                                                                Status: Offline
+                                                                                Offline
                                                                             </span>
                                                                         {%endif%}
                                                                     </h6>
                                                                 </td>
                                                                 <td>
                                                                     <h6 class="text-muted">
-                                                                        {%if item.montir.is_available%}
+                                                                        {%if item.montir.status != "idle"%}
                                                                             <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
                                                                             <span id="status-text-{{ item.montir.montirId }}">
-                                                                                Status: Online
+                                                                                Status: {{item.montir.status}}
                                                                             </span>
                                                                         {%else%}
                                                                             <i class="fas fa-circle text-c-red f-10 m-r-15"></i>
                                                                             <span id="status-text-{{ item.montir.montirId }}">
-                                                                                Status: Offline
+                                                                                Status: {{item.montir.status}}
                                                                             </span>
                                                                         {%endif%}
                                                                     </h6>
